--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.diouani-mokhtar.de",
+  "homepage": "https://www.diouani-mokhtar.de/",
   "name": "my-portofolio",
   "version": "0.1.0",
   "private": true,
